--- a/lamborghini/index.html
+++ b/lamborghini/index.html
@@ -8,6 +8,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,400&family=Roboto:wght@100;400;500;700&display=swap" rel="stylesheet">
+  <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+  />
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -197,9 +201,153 @@
         </div>
       </div>
     </section>
-
+    <section class="blog">
+      <div class="container">
+        <h3 class="blog__title">
+          БЛОГ
+        </h3> 
+        <div class="blog__slider swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide blog__item">
+              <img class="blog__item-img" src="./images/blog-1.jpg" alt="" >
+              <h4 class="blog__item-title">
+                НЕЛЬСОН ПИКЕ СТАЛ ПОБЕДИТЕЛЕМ ГРАНД-ФИНАЛА В ПОРТИМАНЕ
+              </h4>
+              <p class="blog__item-text">
+                Нельсон Пике-младший из Ansa Motorsports обеспечил возвращение титула Lamborghini Super Trofeo Grand Finals в Северную Америку впервые с 2017 года после победы и второе место в паре 50-минутных гонок на Autodromo Nacionale do Algarve в Портимане. Между тем, титул Pro-Am был подорван, поскольку Брайан Ортис и Себастьян Карасо
+              </p>
+              <a href="#" class="blog__item-link">читать подробнее...</a>
+            </div>
+            <div class="swiper-slide blog__item">
+              <img class="blog__item-img" src="./images/blog-2.jpg" alt="" >
+              <h4 class="blog__item-title">
+                ГРАНД ФИНАЛ. ДЕНЬ 1
+              </h4>
+              <p class="blog__item-text">
+                Утренний дождь означал, что мокрая гонка была объявлена ​​до старта, и перед большинством экипажей стоял выбор: использовать слики или мокрые шины. Большинство участников предпочли мокрую трассу, но поулист Спинелли начал гонку на сликах и сразу же поплатился за это. Huracan № 61 опустился вниз, заняв всего 28-е место, поскольку
+              </p>
+              <a href="#" class="blog__item-link">читать подробнее...</a>
+            </div>
+            <div class="swiper-slide blog__item">
+              <img class="blog__item-img" src="./images/blog-1.jpg" alt="" >
+              <h4 class="blog__item-title">
+                НЕЛЬСОН ПИКЕ СТАЛ ПОБЕДИТЕЛЕМ ГРАНД-ФИНАЛА В ПОРТИМАНЕ
+              </h4>
+              <p class="blog__item-text">
+                Нельсон Пике-младший из Ansa Motorsports обеспечил возвращение титула Lamborghini Super Trofeo Grand Finals в Северную Америку впервые с 2017 года после победы и второе место в паре 50-минутных гонок на Autodromo Nacionale do Algarve в Портимане. Между тем, титул Pro-Am был подорван, поскольку Брайан Ортис и Себастьян Карасо
+              </p>
+              <a href="#" class="blog__item-link">читать подробнее...</a>
+            </div>
+            <div class="swiper-slide blog__item">
+              <img class="blog__item-img" src="./images/blog-2.jpg" alt="" >
+              <h4 class="blog__item-title">
+                ГРАНД ФИНАЛ. ДЕНЬ 1
+              </h4>
+              <p class="blog__item-text">
+                Утренний дождь означал, что мокрая гонка была объявлена ​​до старта, и перед большинством экипажей стоял выбор: использовать слики или мокрые шины. Большинство участников предпочли мокрую трассу, но поулист Спинелли начал гонку на сликах и сразу же поплатился за это. Huracan № 61 опустился вниз, заняв всего 28-е место, поскольку
+              </p>
+              <a href="#" class="blog__item-link">читать подробнее...</a>
+            </div>
+          </div>
+          <div class="blog__button swiper-button-left">
+            <img class="" src="./images/arrow-left.svg" alt="">
+          </div>
+          <div class="blog__button swiper-button-right">
+            <img class="" src="./images/arrow-right.svg" alt="">
+          </div>
+        </div>
+        <div class="blog__quote">
+          <div class="blog__quote-box">
+            <blockquote class="blockquote">
+              <cite class="blockquote__name">
+                <span>Чемпион Am</span>
+                Анджей Левандовски
+              </cite>
+              <p class="blockquote__text">
+                «Я очень доволен титулом, моей второй победой в Am и четвертой в Super Trofeo, мне очень приятно делать это в этом году, потому что уровень соревнований очень высок. Должен сказать, сегодня было довольно легко, так как я все время контролировал ситуацию».
+              </p>
+            </blockquote>
+            <blockquote class="blockquote">
+              <cite class="blockquote__name">
+                <span>Обладатель кубка Lamborghini</span>
+                Жерар ван дер Хорст
+              </cite>
+              <p class="blockquote__text">
+                «Я очень доволен титулом, моей второй победой в Am и четвертой в Super Trofeo, мне очень приятно делать это в этом году, потому что уровень соревнований очень высок. Должен Обладатель кубка Lamborghini  добавил: «Здорово выиграть титул, спустя четыре года после последнего
+              </p>
+            </blockquote>
+          </div>
+          <img class="blog__quote-img" src="images/quote.png" alt="">
+        </div>
+      </div>
+    </section>
   </main>
-
+  <footer class="footer">
+    <div class="container">
+      <h3 class="footer__title">
+        Контакты
+      </h3>
+      <div class="footer__top">
+        <ul class="footer_info">
+          <li class="footer__info-item">
+            <dl>
+              <dt>ОБЩИЕ</dt>
+              <dd><a href="tel:+351282405600">+(351) 282 405 600</a></dd>
+              <dd><a href="tel:+351282405697">+(351) 282 405 697</a></dd>
+              <dd><a href="mailto:info@autodromodoalgarve.com">info@autodromodoalgarve.com</a></dd>
+            </dl>
+          </li>
+          <li class="footer__info-item">
+            <dl>
+              <dt>БИЛЕТЫ</dt>
+              <dd><a href="tel:+351282405600">+(351) 282 405 600</a></dd>
+              <dd><a href="mailto:tickets@autodromodoalgarve.com">tickets@autodromodoalgarve.com</a></dd>
+            </dl>
+          </li>
+          <li class="footer__info-item">
+            <ul class="social-list">
+              <li class="social-list__item">
+                <a href="" class="social-list__link">
+                  <img src="images/youtube.svg" alt="" class="social-list__icon">
+                </a>
+              </li>
+              <li class="social-list__item">
+                <a href="" class="social-list__link">
+                  <img src="images/instagram.svg" alt="" class="social-list__icon">
+                </a>
+              </li>
+              <li class="social-list__item">
+                <a href="" class="social-list__link">
+                  <img src="images/facebook.svg" alt="" class="social-list__icon">
+                </a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+        <div class="footer__address">
+          <p class="footer__address-title">
+            АДРЕС
+          </p>
+          <address class="footer__address-text">
+            Sitio do Escampadinho, Mexilhoeira Grande, 8500-148 Portimao, Portugal
+          </address>
+          <div id="map"></div>
+        </div>
+      </div>
+      <div class="footer__bottom">
+        <a class="footer__bottom-link" href="#">Design by Varvara Prokopchuk</a>
+        <a href="#" class="footer__logo">
+          <img class="footer__logo-img" src="images/Logo-footer.svg" alt="logo">
+        </a>
+        <a class="footer__bottom-link" href="#">Политика конфиденциальности</a>
+      </div>
+    </div>
+  </footer>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
+      defer
+    ></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
