--- a/lamborghini/index.html
+++ b/lamborghini/index.html
@@ -308,7 +308,7 @@
             <ul class="social-list">
               <li class="social-list__item">
                 <a href="" class="social-list__link">
-                  <img src="images/youtube.svg" alt="" class="social-list__icon">
+                  <img src="images/youtube1.svg" alt="" class="social-list__icon">
                 </a>
               </li>
               <li class="social-list__item">
@@ -318,7 +318,7 @@
               </li>
               <li class="social-list__item">
                 <a href="" class="social-list__link">
-                  <img src="images/facebook.svg" alt="" class="social-list__icon">
+                  <img src="images/facebook1.svg" alt="" class="social-list__icon">
                 </a>
               </li>
             </ul>
