--- a/lamborghini/index.html
+++ b/lamborghini/index.html
@@ -47,6 +47,36 @@
             <a href="#" class="menu-link">Контакты</a>
           </li>
         </ul>
+        
+        <button class="menu-btn">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+        <ul class="menu-mobile">
+          <li class="menu-item">
+            <a href="#" class="menu-link">О гонке</a>
+          </li>
+          <li class="menu-item">
+            <a href="#" class="menu-link">Трек</a>
+          </li>
+          <li class="menu-item">
+            <a href="#" class="menu-link">Lamborghini Super trofeo</a>
+          </li>
+          <li class="menu-item">
+            <a href="#" class="menu-link">Новости</a>
+          </li>
+          <li class="menu-item">
+            <a href="#" class="menu-link">Купить билеты</a>
+          </li>
+          <li class="menu-item">
+            <a href="#" class="menu-link">Смотреть онлайн</a>
+          </li>
+          <li class="menu-item">
+            <a href="#" class="menu-link">Контакты</a>
+          </li>
+        </ul>
+
       </nav>
     </div>
   </header>
@@ -69,7 +99,7 @@
           </a>
         </div>
       </div>
-    </section>
+    </section> 
     <section class="info">
       <div class="container">
         <div class="info__part info__part--first">
@@ -281,7 +311,7 @@
         </div>
       </div>
     </section>
-  </main>
+  </main> 
   <footer class="footer">
     <div class="container">
       <h3 class="footer__title">
