oculus: header + section top

--- a/oculus/app/index.html
+++ b/oculus/app/index.html
@@ -9,8 +9,47 @@
 </head>
 <body>
 
+  <header class="header">
+    <div class="container">
+      <nav class="nav">
+        <ul class="menu">
+          <li class="menu__list">
+            <a class="menu__link" href="#">SHOP</a>
+          </li>
+          <li class="menu__list">
+            <a class="menu__link" href="#">GAMES</a>
+          </li>
+          <li class="menu__list">
+            <a class="menu__link" href="#">METAVERSE</a>
+          </li>
+        </ul>
+        <a class="logo" href="#">
+          <img src="images/logo.svg" alt="logo">
+        </a>
+        <a class="basket" href="">
+          <img src="images/basket.svg" alt="basket">
+          <span>1</span>
+        </a>
+      </nav>
+    </div>
+  </header>
+  <main class="main">
+    <section class="top">
+      <div class="container">
+        <h1 class="title">Meta Quest 2</h1>
+        <p class="subtitle">Get an Elite Strap free</p>
+        <p class="top__text">
+          For a limited time only, save $59.99 USD. Offer ends 1/19/23
+        </p>
+        <button class="buy-btn">
+          <span class="buy-btn__text">BUY NOW</span>
+          <span class="buy-btn__prise">399,99 USD</span>
+        </button>
+        <p class="buy-text">Meta Quest 2 is for ages 13+</p>
+      </div>
+    </section>
+  </main>
 
-  
   <script src="js/main.min.js"></script>
 </body>
 </html>
