oculus: add section games

--- a/oculus/app/index.html
+++ b/oculus/app/index.html
@@ -50,7 +50,6 @@
     </section>
     <section class="features">
       <div class="container">
-
         <div class="features__titles">
           <h2 class="features__title section-title">PRODUCT FEATURES</h2>
           <p class="features__text">Easy to set up and safe to us</p>
@@ -147,6 +146,38 @@
         </div>
       </div>
     </section>
+    <section class="games">
+      <div class="container">
+        <h2 class="section-title games__title">GAMES</h2>
+        <div class="games__inner">
+          <div class="games__descr">
+            <p class="games__descr-title">It’s all fun and games</p>
+            <p class="games__descr-text">Discover new adventures, master epic challenges or revisit classic moments in your favourite games and experiences</p>
+            <a class="games__descr-link" href="#">SEE ALL GAMES</a>
+          </div>
+          <div class="games__item">
+            <img class="games__item-img" src="images/game-1.jpg" alt="">
+            <h3 class="games__item-title">Blade & Sorcery: Nomad</h3>
+            <p class="games__item-text">Step into a medieval fantasy sandbox that uses phisics to serve up some of the most realistic combat in VR</p>
+            <a class="games__item-link" href="#">see more</a>
+          </div>
+          <div class="games__item">
+            <img class="games__item-img" src="images/game-2.jpg" alt="">
+            <h3 class="games__item-title">Population: One</h3>
+            <p class="games__item-text">Climb anything. Fight everywhere. Experience battle royale only possible in VR
+            </p>
+            <a class="games__item-link" href="#">see more</a>
+          </div>
+          <div class="games__item">
+            <img class="games__item-img" src="images/game-3.jpg" alt="">
+            <h3 class="games__item-title">Supernatural</h3>
+            <p class="games__item-text">Box, Flow, Meditate and Stretch with real coaches in stunning destinations from around the world. Enjoy new workouts every day.</p>
+            <a class="games__item-link" href="#">see more</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
 
   </main>
 
